Improve language selector translation matching with section filter
- Add section check to ensure we only match pages from same section (posts)
- Prevents incorrect matches like /author/ when searching for posts
- Use break to stop searching once correct page is found
- More reliable filename-based translation matching

--- a/layouts/partials/i18n.html
+++ b/layouts/partials/i18n.html
@@ -24,10 +24,13 @@
                 {{- $currentFile := $currentPage.File }}
                 {{- if $currentFile }}
                     {{- $baseName := $currentFile.BaseFileName }}
-                    {{- $targetPath := printf "/%s/posts/%s" $targetLang $baseName }}
-                    {{- $foundPage := $.Site.GetPage $targetPath }}
-                    {{- if and $foundPage (eq $foundPage.Kind "page") }}
-                        {{- $targetURL = $foundPage.RelPermalink }}
+                    {{- $currentSection := $currentPage.Section }}
+                    {{- /* Search for page with same filename in target language, same section */}}
+                    {{- range where $.Site.AllPages "Kind" "page" }}
+                        {{- if and (eq .Language.Lang $targetLang) .File (eq .File.BaseFileName $baseName) (eq .Section $currentSection) }}
+                            {{- $targetURL = .RelPermalink }}
+                            {{- break }}
+                        {{- end }}
                     {{- end }}
                 {{- end }}
                 {{- /* If page not found or not a regular page, $targetURL remains as home (.RelPermalink) */}}
@@ -77,10 +80,13 @@
                             {{- $currentFile := $currentPage.File }}
                             {{- if $currentFile }}
                                 {{- $baseName := $currentFile.BaseFileName }}
-                                {{- $targetPath := printf "/%s/posts/%s" $targetLang $baseName }}
-                                {{- $foundPage := $.Site.GetPage $targetPath }}
-                                {{- if and $foundPage (eq $foundPage.Kind "page") }}
-                                    {{- $targetURL = $foundPage.RelPermalink }}
+                                {{- $currentSection := $currentPage.Section }}
+                                {{- /* Search for page with same filename in target language, same section */}}
+                                {{- range where $.Site.AllPages "Kind" "page" }}
+                                    {{- if and (eq .Language.Lang $targetLang) .File (eq .File.BaseFileName $baseName) (eq .Section $currentSection) }}
+                                        {{- $targetURL = .RelPermalink }}
+                                        {{- break }}
+                                    {{- end }}
                                 {{- end }}
                             {{- end }}
                             {{- /* If page not found or not a regular page, $targetURL remains as home (.RelPermalink) */}}
